<resources>
    <string name="app_name">ToDo</string>
    <string name="all_tag">All</string>
    <string name="work_tag">Work</string>
    <string name="personal_tag">Personal</string>
    <string name="todo_list">ToDo List</string>
    <string name="add_new_task">Add new task</string>
    <string name="title">Title</string>
    <string name="task_description">Task Description</string>
    <string name="deadline">Deadline</string>
    <string name="create">CREATE</string>
    <string name="back">BACK</string>
    <string name="category">Category</string>
    <string name="todo">ToDo</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit Task</string>
    <string name="save_btn">Save</string>
    <string name="title_list_view">Title</string>
    <string name="description_list_view">Description</string>
    <string name="_2024_05_07">2024-05-07</string>
    <string name="deleteBtn">Delete</string>
</resources>