<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FragmentEdit">

        <TextView
            android:id="@+id/editTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/edit_task"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start"
            android:hint="@string/title"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#9C27B0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTaskTitle" />

        <EditText
            android:id="@+id/editTextCat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start"
            android:hint="@string/category"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#9C27B0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

        <EditText
            android:id="@+id/editTextDes"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start"
            android:hint="@string/task_description"
            android:inputType="textMultiLine"
            android:textColorHint="#9C27B0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCat" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:text="@string/save_btn"
            android:textSize="20sp"
            android:backgroundTint="@color/purple_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDes" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:text="@string/deleteBtn"
            android:textSize="20sp"
            android:backgroundTint="@color/purple_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>