<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/purple_light"
            android:padding="16dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="200"
                android:textColor="@color/purple"
                android:text="@string/title_list_view"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxHeight="170dp"
                android:text="@string/description_list_view"
                android:textSize="14sp"
                android:textColor="@color/purple"/>

            <TextView
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxHeight="170dp"
                android:gravity="end"
                android:text="@string/_2024_05_07"
                android:textSize="14sp"
                android:textColor="@color/purple"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>