<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p3"
    tools:context=".ListMain">

    <TextView
        android:id="@+id/todoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/todo_list"
        android:textColor="@color/purple"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/p2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoTitle">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/AllBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/all_tag"
            android:textColor="@color/purple_btn"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/WorkBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/work_tag"
            android:textColor="@color/purple_btn"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/PersonalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_tag"
            android:textColor="@color/purple_btn"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>